# exploring-dbt

./: .flake8  .gitignore  .markdownlint.json  .pre-commit-config.yaml  CHEATSHEET.md  README.md  dbt_project.yml  packages.yml  pyproject.toml  pyvenv.cfg  requirements.txt
data/: hosts.tsv  listings.tsv
macros/: not_null_constraint.sql  positive_value.sql
models/: dashboards.yml  overview.md  schema.md  schema.yml  sources.md  sources.yml
models/dim/: dim_hosts_cleansed.sql  dim_listings_cleansed.sql  dim_listings_with_hosts.sql
models/fct/: fct_reviews.sql
models/mart/: mart_full_moon_reviews.sql
models/raw/: raw_hosts.sql  raw_listings.sql  raw_reviews.sql
snapshots/: scd_raw_listings.sql
tests/: consistent_created_at.sql  dim_listings_min_nights.sql  not_null_dim_hosts.sql  not_null_dim_listings.sql
