[tool.poetry]
name = "learn-dbt"
version = "0.1.0"
description = ""
authors = ["Amites Kumar <amiteshrai@outlook.com>"]

[tool.poetry.dependencies]
python = "^3.9"
dbt-snowflake = "^1.0.0"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
black = "^22.1.0"
isort = "^5.10.1"
pytest = "^7.0.1"
radon = "^5.1.0"
coverage = {extras = ["toml"], version = "^6.3.1"}
pytest-cov = "^3.0.0"
pytest-mock = "^3.7.0"
flake8-black = "^0.2.4"
flake8-import-order = "^0.18.1"
flake8-bugbear = "^22.1.11"
flake8-bandit = "^2.1.2"
mypy = "^0.931"
flake8-annotations = "^2.7.0"
flake8-docstrings = "^1.6.0"
darglint = "^1.8.1"
autoflake = "^1.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
